// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audit Setup > Contests renders empty opportunistic state correctly 1`] = `
<div>
  <form
    data-testid="form-one"
    style="width: 100%;"
  >
    <div
      class="sc-jWBwVP loKOAG"
    >
      <h2
        class="bp3-heading sc-cvbbAY IbGJt"
      >
        Opportunistic Contests
      </h2>
      <div
        class="bp3-card bp3-elevation-0 sc-iyvyFf YETFX"
        style="background: rgb(245, 248, 250);"
      >
        <div
          class="sc-gzVnrw fZKilH"
          style="margin-top: 0px;"
        >
          <h5
            class="bp3-heading"
          >
            Contest  Info
          </h5>
          <div>
            <div
              class="sc-htoDjs GlcDy"
            >
              Enter the name of the contest that will drive the audit.
            </div>
            <label
              for="contests[0].name"
            >
              Contest
               
              
               Name
              <div
                class="sc-VigVT gububh"
              >
                <div
                  class="bp3-input-group sc-jTzLTM heoCiM"
                >
                  <input
                    class="bp3-input"
                    id="contests[0].name"
                    name="contests[0].name"
                    style="padding-right: 10px;"
                    value=""
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            class="sc-htoDjs GlcDy"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].numWinners"
          >
            Winners
            <div
              class="sc-VigVT gububh"
            >
              <div
                class="bp3-input-group sc-jTzLTM heoCiM"
              >
                <input
                  class="bp3-input"
                  id="contests[0].numWinners"
                  name="contests[0].numWinners"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
          <div
            class="sc-htoDjs GlcDy"
          >
            Number of selections the voter can make in the contest.
          </div>
          <label
            for="contests[0].votesAllowed"
          >
            Votes Allowed
            <div
              class="sc-VigVT gububh"
            >
              <div
                class="bp3-input-group sc-jTzLTM heoCiM"
              >
                <input
                  class="bp3-input"
                  id="contests[0].votesAllowed"
                  name="contests[0].votesAllowed"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-gzVnrw fZKilH"
        >
          <h5
            class="bp3-heading"
          >
            Candidates/Choices & Vote Totals
          </h5>
          <div
            class="sc-htoDjs GlcDy"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-kTUwUJ dsKKbc"
          >
            <div
              class="sc-dqBHgY kXQNIO"
            >
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-dqBHgY kXQNIO"
            >
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <p
              class="sc-gzOgki gzLLVp"
            >
              Add a new candidate/choice
            </p>
          </div>
        </div>
        <div
          class="sc-gzVnrw fZKilH"
        >
          <h5
            class="bp3-heading"
          >
            Total Ballot Cards Cast
          </h5>
          <div
            class="sc-htoDjs GlcDy"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballot Cards Cast for Contest
             
            
            <div
              class="sc-VigVT gububh"
            >
              <div
                class="bp3-input-group sc-jTzLTM heoCiM"
              >
                <input
                  class="bp3-input"
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value=""
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-gzVnrw fZKilH"
          style="margin-bottom: 0px;"
        >
          <h5
            class="bp3-heading"
          >
            Contest Universe
          </h5>
          <div
            class="sc-htoDjs GlcDy"
          >
            Select the jurisdictions where this contest appeared on the ballot.
          </div>
          <div
            class="sc-kPVwWT gJhrlA"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button sc-iwsKbI drSRDt"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Select Jurisdictions
                  </span>
                </button>
              </span>
            </span>
            <p>
              0
               of 
              2
               
              selected
            </p>
          </div>
        </div>
      </div>
      <div
        style="padding-top: 15px;"
      >
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-add"
            icon="add"
          >
            <svg
              data-icon="add"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                add
              </desc>
              <path
                d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add Contest
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-jtRfpW cLRBN"
      style="margin-top: 15px;"
    >
      <button
        class="bp3-button"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-arrow-left"
          icon="arrow-left"
        >
          <svg
            data-icon="arrow-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              arrow-left
            </desc>
            <path
              d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Back
        </span>
      </button>
      <button
        class="bp3-button bp3-intent-primary"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
        <span
          class="bp3-icon bp3-icon-arrow-right"
          icon="arrow-right"
        >
          <svg
            data-icon="arrow-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              arrow-right
            </desc>
            <path
              d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Audit Setup > Contests renders empty targeted state correctly 1`] = `
<div>
  <form
    data-testid="form-one"
    style="width: 100%;"
  >
    <div
      class="sc-jWBwVP loKOAG"
    >
      <h2
        class="bp3-heading sc-cvbbAY IbGJt"
      >
        Target Contests
      </h2>
      <div
        class="bp3-card bp3-elevation-0 sc-iyvyFf YETFX"
        style="background: rgb(245, 248, 250);"
      >
        <div
          class="sc-gzVnrw fZKilH"
          style="margin-top: 0px;"
        >
          <h5
            class="bp3-heading"
          >
            Contest  Info
          </h5>
          <div>
            <div
              class="sc-htoDjs GlcDy"
            >
              Enter the name of the contest that will drive the audit.
            </div>
            <label
              for="contests[0].name"
            >
              Contest
               
              
               Name
              <div
                class="sc-VigVT gububh"
              >
                <div
                  class="bp3-input-group sc-jTzLTM heoCiM"
                >
                  <input
                    class="bp3-input"
                    id="contests[0].name"
                    name="contests[0].name"
                    style="padding-right: 10px;"
                    value=""
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            class="sc-htoDjs GlcDy"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].numWinners"
          >
            Winners
            <div
              class="sc-VigVT gububh"
            >
              <div
                class="bp3-input-group sc-jTzLTM heoCiM"
              >
                <input
                  class="bp3-input"
                  id="contests[0].numWinners"
                  name="contests[0].numWinners"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
          <div
            class="sc-htoDjs GlcDy"
          >
            Number of selections the voter can make in the contest.
          </div>
          <label
            for="contests[0].votesAllowed"
          >
            Votes Allowed
            <div
              class="sc-VigVT gububh"
            >
              <div
                class="bp3-input-group sc-jTzLTM heoCiM"
              >
                <input
                  class="bp3-input"
                  id="contests[0].votesAllowed"
                  name="contests[0].votesAllowed"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-gzVnrw fZKilH"
        >
          <h5
            class="bp3-heading"
          >
            Candidates/Choices & Vote Totals
          </h5>
          <div
            class="sc-htoDjs GlcDy"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-kTUwUJ dsKKbc"
          >
            <div
              class="sc-dqBHgY kXQNIO"
            >
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-dqBHgY kXQNIO"
            >
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <p
              class="sc-gzOgki gzLLVp"
            >
              Add a new candidate/choice
            </p>
          </div>
        </div>
        <div
          class="sc-gzVnrw fZKilH"
        >
          <h5
            class="bp3-heading"
          >
            Total Ballot Cards Cast
          </h5>
          <div
            class="sc-htoDjs GlcDy"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballot Cards Cast for Contest
             
            
            <div
              class="sc-VigVT gububh"
            >
              <div
                class="bp3-input-group sc-jTzLTM heoCiM"
              >
                <input
                  class="bp3-input"
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value=""
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-gzVnrw fZKilH"
          style="margin-bottom: 0px;"
        >
          <h5
            class="bp3-heading"
          >
            Contest Universe
          </h5>
          <div
            class="sc-htoDjs GlcDy"
          >
            Select the jurisdictions where this contest appeared on the ballot.
          </div>
          <div
            class="sc-kPVwWT gJhrlA"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button sc-iwsKbI drSRDt"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Select Jurisdictions
                  </span>
                </button>
              </span>
            </span>
            <p>
              0
               of 
              2
               
              selected
            </p>
          </div>
        </div>
      </div>
      <div
        style="padding-top: 15px;"
      >
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-add"
            icon="add"
          >
            <svg
              data-icon="add"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                add
              </desc>
              <path
                d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add Contest
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-jtRfpW cLRBN"
      style="margin-top: 15px;"
    >
      <button
        class="bp3-button"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-arrow-left"
          icon="arrow-left"
        >
          <svg
            data-icon="arrow-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              arrow-left
            </desc>
            <path
              d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Back
        </span>
      </button>
      <button
        class="bp3-button bp3-intent-primary"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
        <span
          class="bp3-icon bp3-icon-arrow-right"
          icon="arrow-right"
        >
          <svg
            data-icon="arrow-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              arrow-right
            </desc>
            <path
              d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Audit Setup > Contests renders filled opportunistic state correctly 1`] = `
<div>
  <form
    data-testid="form-one"
    style="width: 100%;"
  >
    <div
      class="sc-jWBwVP loKOAG"
    >
      <h2
        class="bp3-heading sc-cvbbAY IbGJt"
      >
        Opportunistic Contests
      </h2>
      <div
        class="bp3-card bp3-elevation-0 sc-iyvyFf YETFX"
        style="background: rgb(245, 248, 250);"
      >
        <div
          class="sc-gzVnrw fZKilH"
          style="margin-top: 0px;"
        >
          <h5
            class="bp3-heading"
          >
            Contest  Info
          </h5>
          <div>
            <div
              class="sc-htoDjs GlcDy"
            >
              Enter the name of the contest that will drive the audit.
            </div>
            <label
              for="contests[0].name"
            >
              Contest
               
              
               Name
              <div
                class="sc-VigVT gububh"
              >
                <div
                  class="bp3-input-group sc-jTzLTM heoCiM"
                >
                  <input
                    class="bp3-input"
                    id="contests[0].name"
                    name="contests[0].name"
                    style="padding-right: 10px;"
                    value="Contest Name"
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            class="sc-htoDjs GlcDy"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].numWinners"
          >
            Winners
            <div
              class="sc-VigVT gububh"
            >
              <div
                class="bp3-input-group sc-jTzLTM heoCiM"
              >
                <input
                  class="bp3-input"
                  id="contests[0].numWinners"
                  name="contests[0].numWinners"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
          <div
            class="sc-htoDjs GlcDy"
          >
            Number of selections the voter can make in the contest.
          </div>
          <label
            for="contests[0].votesAllowed"
          >
            Votes Allowed
            <div
              class="sc-VigVT gububh"
            >
              <div
                class="bp3-input-group sc-jTzLTM heoCiM"
              >
                <input
                  class="bp3-input"
                  id="contests[0].votesAllowed"
                  name="contests[0].votesAllowed"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-gzVnrw fZKilH"
        >
          <h5
            class="bp3-heading"
          >
            Candidates/Choices & Vote Totals
          </h5>
          <div
            class="sc-htoDjs GlcDy"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-kTUwUJ dsKKbc"
          >
            <div
              class="sc-dqBHgY kXQNIO"
            >
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value="Choice Three"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value="10"
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-dqBHgY kXQNIO"
            >
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value="Choice Four"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value="20"
                    />
                  </div>
                </div>
              </label>
            </div>
            <p
              class="sc-gzOgki gzLLVp"
            >
              Add a new candidate/choice
            </p>
          </div>
        </div>
        <div
          class="sc-gzVnrw fZKilH"
        >
          <h5
            class="bp3-heading"
          >
            Total Ballot Cards Cast
          </h5>
          <div
            class="sc-htoDjs GlcDy"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballot Cards Cast for Contest
             
            
            <div
              class="sc-VigVT gububh"
            >
              <div
                class="bp3-input-group sc-jTzLTM heoCiM"
              >
                <input
                  class="bp3-input"
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value="30"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-gzVnrw fZKilH"
          style="margin-bottom: 0px;"
        >
          <h5
            class="bp3-heading"
          >
            Contest Universe
          </h5>
          <div
            class="sc-htoDjs GlcDy"
          >
            Select the jurisdictions where this contest appeared on the ballot.
          </div>
          <div
            class="sc-kPVwWT gJhrlA"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button sc-iwsKbI drSRDt"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Select Jurisdictions
                  </span>
                </button>
              </span>
            </span>
            <p>
              0
               of 
              2
               
              selected
            </p>
          </div>
        </div>
      </div>
      <div
        style="padding-top: 15px;"
      >
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-add"
            icon="add"
          >
            <svg
              data-icon="add"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                add
              </desc>
              <path
                d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add Contest
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-jtRfpW cLRBN"
      style="margin-top: 15px;"
    >
      <button
        class="bp3-button"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-arrow-left"
          icon="arrow-left"
        >
          <svg
            data-icon="arrow-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              arrow-left
            </desc>
            <path
              d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Back
        </span>
      </button>
      <button
        class="bp3-button bp3-intent-primary"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
        <span
          class="bp3-icon bp3-icon-arrow-right"
          icon="arrow-right"
        >
          <svg
            data-icon="arrow-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              arrow-right
            </desc>
            <path
              d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Audit Setup > Contests renders filled targeted state correctly 1`] = `
<div>
  <form
    data-testid="form-one"
    style="width: 100%;"
  >
    <div
      class="sc-jWBwVP loKOAG"
    >
      <h2
        class="bp3-heading sc-cvbbAY IbGJt"
      >
        Target Contests
      </h2>
      <div
        class="bp3-card bp3-elevation-0 sc-iyvyFf YETFX"
        style="background: rgb(245, 248, 250);"
      >
        <div
          class="sc-gzVnrw fZKilH"
          style="margin-top: 0px;"
        >
          <h5
            class="bp3-heading"
          >
            Contest  Info
          </h5>
          <div>
            <div
              class="sc-htoDjs GlcDy"
            >
              Enter the name of the contest that will drive the audit.
            </div>
            <label
              for="contests[0].name"
            >
              Contest
               
              
               Name
              <div
                class="sc-VigVT gububh"
              >
                <div
                  class="bp3-input-group sc-jTzLTM heoCiM"
                >
                  <input
                    class="bp3-input"
                    id="contests[0].name"
                    name="contests[0].name"
                    style="padding-right: 10px;"
                    value="Contest Name"
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            class="sc-htoDjs GlcDy"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].numWinners"
          >
            Winners
            <div
              class="sc-VigVT gububh"
            >
              <div
                class="bp3-input-group sc-jTzLTM heoCiM"
              >
                <input
                  class="bp3-input"
                  id="contests[0].numWinners"
                  name="contests[0].numWinners"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
          <div
            class="sc-htoDjs GlcDy"
          >
            Number of selections the voter can make in the contest.
          </div>
          <label
            for="contests[0].votesAllowed"
          >
            Votes Allowed
            <div
              class="sc-VigVT gububh"
            >
              <div
                class="bp3-input-group sc-jTzLTM heoCiM"
              >
                <input
                  class="bp3-input"
                  id="contests[0].votesAllowed"
                  name="contests[0].votesAllowed"
                  style="padding-right: 10px;"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-gzVnrw fZKilH"
        >
          <h5
            class="bp3-heading"
          >
            Candidates/Choices & Vote Totals
          </h5>
          <div
            class="sc-htoDjs GlcDy"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-kTUwUJ dsKKbc"
          >
            <div
              class="sc-dqBHgY kXQNIO"
            >
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value="Choice One"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value="10"
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-dqBHgY kXQNIO"
            >
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value="Choice Two"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-dfVpRl TNLpk"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-gxMtzJ gJDHuz sc-VigVT gububh"
                >
                  <div
                    class="bp3-input-group sc-jTzLTM heoCiM"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value="20"
                    />
                  </div>
                </div>
              </label>
            </div>
            <p
              class="sc-gzOgki gzLLVp"
            >
              Add a new candidate/choice
            </p>
          </div>
        </div>
        <div
          class="sc-gzVnrw fZKilH"
        >
          <h5
            class="bp3-heading"
          >
            Total Ballot Cards Cast
          </h5>
          <div
            class="sc-htoDjs GlcDy"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballot Cards Cast for Contest
             
            
            <div
              class="sc-VigVT gububh"
            >
              <div
                class="bp3-input-group sc-jTzLTM heoCiM"
              >
                <input
                  class="bp3-input"
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value="30"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-gzVnrw fZKilH"
          style="margin-bottom: 0px;"
        >
          <h5
            class="bp3-heading"
          >
            Contest Universe
          </h5>
          <div
            class="sc-htoDjs GlcDy"
          >
            Select the jurisdictions where this contest appeared on the ballot.
          </div>
          <div
            class="sc-kPVwWT gJhrlA"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button sc-iwsKbI drSRDt"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Select Jurisdictions
                  </span>
                </button>
              </span>
            </span>
            <p>
              1
               of 
              2
               
              selected
            </p>
          </div>
        </div>
      </div>
      <div
        style="padding-top: 15px;"
      >
        <button
          class="bp3-button"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-add"
            icon="add"
          >
            <svg
              data-icon="add"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                add
              </desc>
              <path
                d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add Contest
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-jtRfpW cLRBN"
      style="margin-top: 15px;"
    >
      <button
        class="bp3-button"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-arrow-left"
          icon="arrow-left"
        >
          <svg
            data-icon="arrow-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              arrow-left
            </desc>
            <path
              d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Back
        </span>
      </button>
      <button
        class="bp3-button bp3-intent-primary"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
        <span
          class="bp3-icon bp3-icon-arrow-right"
          icon="arrow-right"
        >
          <svg
            data-icon="arrow-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              arrow-right
            </desc>
            <path
              d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </form>
</div>
`;
